--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                     <p>
                         View student performance and assessment results.
                     </p>
-                    <button class="btn btn-secondary" onclick="viewDashboard()">
-                        View Dashboard
-                    </button>
+                    <a href="teacherlogin.html" class="btn btn-secondary">Teacher Login</a>
                 </div>
             </div>
         </div>
