--- a/teacherlogin.html
+++ b/teacherlogin.html
@@ -38,9 +38,15 @@
             </form>
 
             <p class="signup-prompt">
-                New here? 
+                New here?
                 <a href="teachersignup.html">
                     Create an account
+                </a>
+            </p>
+
+            <p class="back-home">
+                <a href="index.html">
+                    &larr; Back to Home
                 </a>
             </p>
         </div>
