--- a/teachersignup.html
+++ b/teachersignup.html
@@ -42,6 +42,19 @@
                     Sign Up &rarr;
                 </button>
             </form>
+
+            <p class="login-prompt">
+                Already have an account?
+                <a href="teacherlogin.html">
+                    Log In
+                </a>
+            </p>
+
+            <p class="back-home">
+                <a href="index.html">
+                    &larr; Back to Home
+                </a>
+            </p>
         </div>
     </main>
 
