--- a/teacherdb.html
+++ b/teacherdb.html
@@ -71,6 +71,31 @@
         color: #dc2626;
         font-weight: 600;
       }
+
+      .header-actions {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+
+      .btn-logout {
+        background: #dc2626;
+        color: white;
+        border: none;
+        padding: 8px 16px;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 14px;
+        transition: background-color 0.2s;
+      }
+
+      .btn-logout:hover {
+        background: #b91c1c;
+      }
+
+      header {
+        position: relative;
+      }
     </style>
   </head>
   <body>
@@ -78,6 +103,9 @@
       <div class="container">
         <h1>EduMetrics</h1>
         <p>AI-Driven Student Competency Evaluation</p>
+      </div>
+      <div class="header-actions">
+        <button class="btn-logout" onclick="logout()">Log Out</button>
       </div>
     </header>
 
@@ -127,8 +155,8 @@
           </div>
           <div class="stat-card">
             <div class="stat-number" id="avgScore">0%</div>
-            <div class="stat-label">Average Score</div>
-          </div>
+            <div class=" Score</div>
+stat-label">Average          </div>
           <div class="stat-card">
             <div class="stat-number" id="readyStudents">0</div>
             <div class="stat-label">Ready Students</div>
@@ -265,6 +293,13 @@
       // Load students on page load
       window.addEventListener("DOMContentLoaded", loadStudents);
 
+      // LOGOUT FUNCTION
+      function logout() {
+        if (confirm('Are you sure you want to log out?')) {
+          window.location.href = 'index.html';
+        }
+      }
+
       // LOAD STUDENTS FROM BACKEND
 
       async function loadStudents() {
@@ -377,7 +412,7 @@
                     }">${student.readinessLevel}</span></td>
                     <td><button class="btn-view-details" onclick='openModal(${JSON.stringify(
                       student
-                    ).replace(/'/g, "&apos;")})'>👁️ View Details</button></td>
+                    ).replace(/'/g, "'")})'>👁️ View Details</button></td>
                 </tr>
             `
           )
