--- a/assessment-results.html
+++ b/assessment-results.html
@@ -292,10 +292,9 @@
     <script>
         // LOGOUT FUNCTION
         function logout() {
-            if (confirm('Are you sure you want to log out? This will clear all your data.')) {
-                localStorage.clear();
-                window.location.href = 'index.html';
-            }
+            if (!confirm("Are you sure you want to log out?")) return;
+            localStorage.clear();
+            window.location.href = 'index.html';
         }
 
         // LOAD AND DISPLAY RESULTS
