--- a/studasspage.html
+++ b/studasspage.html
@@ -66,8 +66,12 @@
       </div>
     </main>
 
+    <!-- Modal Container -->
+    <div id="modalContainer" class="modal-hidden"></div>
+
     <!-- Load Questions Data FIRST, then Main Script -->
     <script src="questions.js"></script>
+    <script src="modal.js"></script>
     <script src="studasspage.js"></script>
 
     <!-- Firebase Configuration -->
