--- a/teacherdb.html
+++ b/teacherdb.html
@@ -295,9 +295,9 @@ stat-label">Average          </div>
 
       // LOGOUT FUNCTION
       function logout() {
-        if (confirm('Are you sure you want to log out?')) {
+        showCustomConfirm('Logout Confirmation', 'Are you sure you want to log out?', () => {
           window.location.href = 'index.html';
-        }
+        });
       }
 
       // LOAD STUDENTS FROM BACKEND
@@ -666,5 +666,10 @@ stat-label">Average          </div>
       firebase.initializeApp(firebaseConfig);
       const db = firebase.firestore();
     </script>
+
+    <!-- Modal Container -->
+    <div id="modalContainer" class="modal-hidden"></div>
+
+    <script src="modal.js"></script>
   </body>
 </html>
